[package]
name = "nearby-back"
version = "0.1.0"
authors = ["Adrien BARRAL <aba@robopec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = {version="0.4.19", features=["serde"]}
serde = "1"
serde_json = "1"
actix-rt = "2.1"
mongodb = "1.1.1"
futures = "0.3.8"

[dev-dependencies]
mockall = "0.9.1"