[package]
name = "nearby-back"
version = "0.1.0"
authors = ["Adrien BARRAL <aba@robopec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3"
chrono = {version="0.4.19", features=["serde"]}
serde = "1"
serde_json = "1"
actix-rt = "2.1"
futures = "0.3.8"
tokio = { version = "0.2", features = ["full"] }

[dependencies.mongodb]
version = "1.2"
default-features = false
features = ["tokio-runtime"]


[dev-dependencies]
mockall = "0.9.1"